<resources>
    <string name="app_name">StartAndroid5and6</string>
    <string name="text_View">Вводим числа:</string>
    <string name="btnToast">Toast</string>
    <string name="btnSnackbar">Snackbar</string>
    <string name="btnDialog">Dialog</string>
    <string name="btnTouchDown">Touch Down</string>
    <string name="btnTouchUp">Touch Up</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="hint_123456789">Пример: 123456789</string>
    <string name="btn_secret">Секрет</string>
    <string name="toast">Так выглядит toast</string>
    <string name="snackbar">А так выглядит snackbar</string>
    <string name="titleName">"Dialog"</string>
    <string name="alertMassage">"А это вот AlertDialog"</string>
    <string name="alertPositiveButton">"ОК"</string>
    <string name="toast_btnTouchDown">А ну уйди!</string>
    <string name="toast_btnTouchUp">Куда ушел вернись!</string>
</resources>